--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
     "test": "mocha --reporter spec test/test"
   },
   "dependencies": {
-    "acorn-jsx": "~0.6.1-3",
     "ast-types": "^0.3.29",
     "escodegen": "^1.3.3",
-    "estraverse-fb": "^1.0.0",
-    "esutils": "^1.1.4",
-    "through": "^2.3"
+    "estraverse": "^1.0.0",
+    "esutils": "^1.1.4"
   },
   "devDependencies": {
     "mocha": "^1.20",
